Fix Lisa N Cao reference, add gap in speaker wall

--- a/themes/coceu/assets/scss/_speaker.scss
+++ b/themes/coceu/assets/scss/_speaker.scss
@@ -14,6 +14,7 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(120px, 280px));
     grid-column-gap: 40px;
+	grid-row-gap: 50px;
     justify-content: space-around;
 
 }
